# schemaviz

./: .eslintrc  .gitignore  LICENSE  README.md  index.html  index.html.old  package-lock.json  package.json  params.json  pgschema.sql  schema.csv  style.css  viz.js  webpack.config.js
.git-hooks/: pre-commit
backend/: .gitignore  pyproject.toml
backend/schemaviz_backend/: main.py
frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  webpack.config.js
frontend/src/: index.js  parse.js  render.js
frontend/src/tests/: parse.test.js
src/: index.js  parse.js  render.js
src/tests/: parse.test.js
stylesheets/: styles.css
