[tool.poetry]
name = "schemaviz-backend"
version = "0.0.1"
description = "REST service for Schemaviz"
authors = ["Shashank Ramaprasad <shashankr@me.com>"]
readme = "README.md"
packages = [{ include = "schemaviz_backend" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = { extras = ["standard"], version = "^0.17.1" }
python-dotenv = "^0.19.2"
psycopg = {extras = ["binary"], version = "^3.0.15"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
